Make sure images don't overflow their container on single refined-image page

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -222,6 +222,7 @@ input[type="submit"]
 .refined-image-container
 {
    border: 1px solid @gray-lighter;
+   max-width: 100%;
 
    &.resizable
    {
